--- a/HW1207/HW1207Q10.md
+++ b/HW1207/HW1207Q10.md
@@ -48,3 +48,5 @@
 ><img width="128" alt="image" src="https://github.com/user-attachments/assets/07fbc678-ae0d-4fa4-a1a7-2852c275234c" />
 >
 >由表中得知， $R^2$ = 95.64%，表示這個模型可以解釋的「變異」占「總變異」的95.64%。
+
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
