--- a/HW1207/HW1207Q12.md
+++ b/HW1207/HW1207Q12.md
@@ -1,3 +1,5 @@
 ![image](https://github.com/user-attachments/assets/9bdd8553-7dfa-401b-950c-76175afc04c0)
 
 ![image](https://github.com/user-attachments/assets/bd1c8bb8-48d0-446b-9e8f-4c74fe6ece1d)
+
+reviewed by 黃馨霈 20241221 $\textbf{\textcolor{red}{score: 100}}$
