--- a/HW1207/14_陳偉豪/CH12.03_Q09.md
+++ b/HW1207/14_陳偉豪/CH12.03_Q09.md
@@ -73,7 +73,6 @@ $F_{stat}$ = 494.3926
 
 ### d. 
 
-
-$R^2 = \frac{S_{xy}^2}{S_{xx}S_{yy}} =  = 0.9725＄
+$R^2 = \frac{S_{xy}^2}{S_{xx}S_{yy}} = 0.9725$
 
 表示這個線性回歸模型解釋了變異佔總變異的97%
