--- a/HW1123/05_張育菁/CH09.02_Q23.md
+++ b/HW1123/05_張育菁/CH09.02_Q23.md
@@ -1,2 +1,21 @@
 ![圖片](https://github.com/user-attachments/assets/e5837454-15be-4ab2-b1ae-5ed6e9a5a0c3)
 
+### a. 如果你是質量控制經理，並希望確保每包絞肉的平均重量確實是1磅，你會做那些假設檢定？
+$$H_0$$ : $$\mu$$ = 1 
+
+$$H_a$$ : $$\mu\ne$$ 1  (雙尾檢定)
+
+
+### b. 計算 p 值並用它來執行假設檢定。
+假設 $\alpha = 0.05$， 
+
+由題意知樣本量(n=35)大於統計學家認定的30，故 $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}}$$ -> 可以使用Z分配進行檢定。 
+
+P-Value=P(Z>| $$z_{0}$$ |)= 2 * P(Z>| $$\frac{1.01 - 1}{0.18/\sqrt{35}} $$ |) = 2 * P(Z>0.33)，查表得到: 
+
+=2*(1-P(Z<0.33)=2*(1-0.6293)=0.7414 > $$\alpha = 0.05 $$，因為統計量未落入Rejection Region，故沒有足夠證據推翻 $$H_{0} $$。
+
+
+### c. 如何向消費者利益小組報告你的研究結果？
+
+「根據對 35 個隨機抽樣包裝的分析，碎牛肉的平均重量為 1.01 磅，略高於設計重量 1 磅。然而，統計檢驗表明，此差異不具有統計顯著性 。因此，我們沒有足夠的證據來推翻包裝平均重量為1磅。」
