--- a/HW1123/05_張育菁/CH09.02_Q24.md
+++ b/HW1123/05_張育菁/CH09.02_Q24.md
@@ -1,2 +1,28 @@
 ![圖片](https://github.com/user-attachments/assets/2ea6ced4-47ca-4c4f-ba2c-9f51e403374f)
 
+由題目得知：3個月大的女嬰的體重平均為5.86公斤。城市內的一家兒科診所的醫生懷疑他們診所裡3個月大女嬰的平均體重小於5.86公斤。 
+
+他們隨機抽取了40名3個月大的女嬰，發現她們的平均體重大約是5.56公斤，標準差為0.70公斤。 
+
+### a. 數據是否顯示該機構3個月大女嬰的平均體重小於5.86公斤？使用顯著水準 α = 0.05 進行檢定。 
+
+已知條件 : n=40, $$\bar{x} $$=5.56, s=0.70 , $$\sigma $$未知，但樣本數 > 30，故可採用Z分配進行檢定。 
+
+$$H_0$$ : $$\mu\ge$$ 5.86 
+
+$$H_a$$ : $$\mu < $$ 5.86 (左尾檢定)
+
+$$\alpha $$ = 0.05，查表得到 $$Z_{0.05} $$  = -1.645  
+
+Z-test : Z = $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$  = $$\frac{5.56 - 5.86}{0.70/\sqrt{40}} $$ = -2.7105 < -1.645。    
+
+因為Z檢定量落在Rejection Region，故拒絕 $$H_{0} $$ 。 
+
+
+### b. 該檢定的p值是多少？使用p值是否可以在5%的顯著水準下拒絕 H₀？
+
+P-Value = P( Z < -2.7105 )，查表得到 : P( Z < -2.7105 ) = 0.00335 < $$\alpha=0.05 $$。 
+
+可以。因為P-Value檢定量<顯著水準($$\alpha $$)，故拒絕 $$H_{0} $$。
+
+因此該診所3個月大的女嬰體重可能低於5.86公斤
