--- a/HW1123/05_張育菁/CH09.02_Q25.md
+++ b/HW1123/05_張育菁/CH09.02_Q25.md
@@ -1,2 +1,31 @@
 ![圖片](https://github.com/user-attachments/assets/c77fb8c8-21d5-4cbb-ae12-4dadd58e382f)
 
+
+
+由題目得知：一個藥品製造商聲稱其某抗生素的平均效能為80%。 
+
+隨機抽取了 n = 100顆膠囊進行測試，結果得到樣本平均值 x = 79.7%，標準差 s = 0.8%。 
+
+這些數據是否提供足夠的證據來駁斥製造商的聲明？顯著水準 α = 0.05。
+
+### a.設定要檢驗的 H₀ 
+
+$$H_0$$ : $$\mu\=$$ 0.8  
+
+### b.設定對立假設 
+
+$$H_a$$ : $$\mu\ne $$ 0.8 (雙尾檢定) 
+
+### c.進行假設檢定，並陳述結論 
+
+已知條件 : n=100, $$\bar{x} $$=0.797, s=0.008 , $$\sigma $$未知，但樣本數 > 30，故可採用Z分配進行檢定。  
+
+$$\alpha $$ = 0.05，因為是雙尾檢定，查表得到 $$Z_{\alpha /2}=Z_{0.025} $$  = 1.96。   
+
+Z-test : Z = $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$  = | $$\frac{0.797 - 0.8}{0.008/\sqrt{100}} $$ | = 3.75 > 1.96。  
+
+因Z檢定量落在Rejection Region， 故拒絕 $$H_{0} $$。 
+
+即有充份證據顯示抗生素的平均效能 $$\ne 80 $$% ，故拒絕 $$H_{0} $$。 
+
+
