--- a/HW1123/05_張育菁/CH09.04_Q01-03.md
+++ b/HW1123/05_張育菁/CH09.04_Q01-03.md
@@ -1,2 +1,54 @@
 ![圖片](https://github.com/user-attachments/assets/76bb13b3-5a6a-4c7f-b7d7-5fb404fa30b6)
 
+
+
+由題目得知：在顯著水準 α = 0.05。進行假設檢定，並陳述結論 
+
+### 1：隨機抽取的樣本大小 n=1000，樣本中的成功次數為 279 次，我們希望檢驗比例 p 是否小於 0.3 
+
+$$H_0$$ : p $$\ge $$ 0.3 
+
+$$H_a$$ : p < 0.3 (左尾檢定) 
+
+已知條件 : n=1000, $$\hat{p} =279/1000 $$=0.279, n*p=300 且 n*(1-p)=700 $$\ge $$ 5，故可採用Z分配進行檢定。  
+
+左尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=-1.645 
+
+Z-test :  
+
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.279 - 0.3}{\sqrt{\frac{0.3 * 0.7}{1000}}} $$ = -1.449 > -1.645 。     
+
+因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
+
+### 2：隨機抽取的樣本大小 n=1400，樣本中的成功次數為 529 次，我們希望檢驗比例 p 是否不等於 0.4
+
+$$H_0$$ : p = 0.4
+
+$$H_a$$ : p $$\ne $$ 0.4 (雙尾檢定)
+
+已知條件 : n=1400, $$\hat{P} =529/1400 $$=0.3779, n*p=560 且 n*(1-p)=840 $$\ge $$ 5 ，故可採用Z分配進行檢定。  
+
+雙尾檢定，故 $$\alpha/2 $$ = 0.025 ，查表得到Z=1.96 
+
+Z-test :  
+
+|Z| = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.3779 - 0.4}{\sqrt{\frac{0.4 * 0.6}{1400}}} $$ = 1.688 < 1.96 。     
+
+因為Z檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
+
+### 3：隨機抽取的樣本大小 n=120，樣本中的成功次數為 72 次，我們希望檢驗比例 p 是否大於 0.5  
+ 
+$$H_0$$ : p $$\le $$ 0.5 
+ 
+$$H_a$$ : p > 0.5 (右尾檢定)  
+ 
+已知條件 : n=120, $$\hat{P} =72/120 $$=0.6, n*p=60 且 n*(1-p)=60 $$\ge $$ 5，故可採用Z分配進行檢定。   
+ 
+右尾檢定，故 $$\alpha $$ = 0.05 ，查表得到Z=1.645  
+ 
+Z-test :   
+ 
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.6 - 0.5}{\sqrt{\frac{0.5 * 0.5}{1000}}} $$ = 2.1909 > 1.645 。   
+ 
+因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ 。   
+
