--- a/HW1123/05_張育菁/CH09.04_Q09.md
+++ b/HW1123/05_張育菁/CH09.04_Q09.md
@@ -1,2 +1,34 @@
 ![圖片](https://github.com/user-attachments/assets/f920d6f3-3090-45b5-8d12-398398ab3d77)
 
+由題目得知：新的稅收結構旨在幫助小型企業生存。目前已知有 20% 的小型企業在第一年倒閉。在一個包含 200 家新小型企業的隨機樣本中，追蹤其開業一年後的情況，發現有 30 家倒閉。
+
+### a. 如果我們希望檢驗新稅法是否幫助小型企業生存，如何表達H0​和Ha？
+
+$$H_0$$ : p $$\ge $$ 0.2 
+ 
+$$H_a$$ : p < 0.2 (左尾檢定)  
+
+
+### b. 基於樣本失敗的小型企業比例，計算檢驗統計量 p^。
+
+$$\hat{P} $$ = $$\frac{30}{200}$$ = 0.15
+
+
+### c. 基於顯著性水平 α=0.05 的拒絕區域是多少？您能得出新稅法幫助小型企業生存的結論嗎？
+
+顯著水準 $$\alpha $$ = 0.05，棄卻域(Rejection Region)的臨界值(Critical Value)，查表得到 = -1.645
+
+Z = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.15 - 0.2}{\sqrt{\frac{0.2 * 0.8}{200}}} $$ 
+
+= -1.7677  $$\cong -1.77 $$ < -1.645      
+
+因為Z檢定量落入Rejection Region，故拒絕 $$H_{0} $$ ，可能降低小企業失敗率。   
+
+### d. 計算檢驗的 p-value。您在 c 部分的結論會改變嗎？
+
+P-Value = P( Z < -1.77 )，查表得到 : P( Z < -1.77 ) = 0.0384 < $$\alpha=0.05 $$。
+
+因為P-Value < $$\alpha $$，故拒絕 $$H_{0} $$ 。   
+
+使用P-Value檢定，得出與Z檢定相同的結果，故不會改變c小題的結論，可能降低小企業失敗率。
+
