--- a/HW1123/05_張育菁/CH09.04_Q10.md
+++ b/HW1123/05_張育菁/CH09.04_Q10.md
@@ -1,2 +1,28 @@
 ![圖片](https://github.com/user-attachments/assets/f0200f2e-7877-4f5f-ae92-b22e25c077e6)
 
+由題目得知：一株紅色花瓣的牡丹花與另一株有條紋花瓣的牡丹花進行交配。  
+
+遺傳學家聲稱這次交配的後代中，有75%的後代會擁有紅色花瓣。  
+
+為了檢驗這一說法，收集了100顆種子，交配後並發芽，並發現其中有58株植物擁有紅色花瓣。  
+
+### a. 針對遺傳學家的說法，應提出什麼假設來進行檢驗?
+
+$$H_0$$ : P = 0.75
+
+$$H_a$$ : P $$\ne $$ 0.75 (雙尾檢定)
+
+### b. 計算檢驗統計量及其 p 值，並用 1% 顯著水準評估結果的統計顯著性。  
+
+已知條件 : n=100, $$\hat{P} =58/100 $$=0.58, n*p=75 且 n*(1-p)=25 $$\ge $$ 5 。  
+
+雙尾檢定，故 $$\alpha/2 $$ = 0.005 ，查表得到Z=2.57 
+
+|Z| = $$\frac{\hat{p} - p_0}{\sqrt{\frac{p_0 q_0}{n}}} $$ = $$\frac{0.58 - 0.75}{\sqrt{\frac{0.75 * 0.25}{100}}} $$ 
+
+= 3.9258 $$\cong 3.93 > 2.57 $$。     
+
+P-Value = 2*P( Z > 3.93 )，查表得到 : P( Z > 3.93 ) = 0，故 2*P( Z > 3.93 ) = 0 < $$\alpha =0.01 $$。
+
+使用Z檢定與P-Value檢定，得到相同的結果，故拒絕 $$H_{0} $$ ，因此有充份的證據推翻出現紅色花瓣的比例等於75%。   
+
