--- a/HW1123/05_張育菁/CH10.01_Q6-7.md
+++ b/HW1123/05_張育菁/CH10.01_Q6-7.md
@@ -1,2 +1,25 @@
 ![圖片](https://github.com/user-attachments/assets/6e07fb69-715a-476d-a80e-f28310df74b3)
 
+### 6. 依題意，查表找出右尾區域，當顯著水準 $$\alpha=0.10，d.f.=7$$的t值。
+標準t分配對稱於0，求右尾區域t值，直接查詢t分配表即可。 
+
+$$t_{n-1,\alpha}$$ , $$t_{7,0.05}$$，查t分配表得到 : 
+$t_{7,0.05} = 1.415$  
+
+![CH10 01_Q06-table2](https://github.com/user-attachments/assets/15aa36c4-35ab-4e45-8fca-fa417f111ddd)
+
+
+![CH10 01_Q06-table1](https://github.com/user-attachments/assets/1d6d784a-02df-488c-a72c-4fc2b30e965d)  
+
+### 7. 依題意，查表找出左尾區域，當顯著水準 $$\alpha=0.01，d.f.=9$$的t值。
+標準t分配對稱於0，因為係求左尾區域t值，查詢t分配表時，左尾區域的t值需要做負號的轉換。 
+
+故 $$-t_{n-1,\alpha}$$ , $$-t_{9,0.01}$$，查t分配表得到 : 
+$-t_{9,0.01} = -2.821$  
+
+![CH10 01_Q07-table2](https://github.com/user-attachments/assets/5756f178-b035-4c00-bdf8-4c36921d675a)
+  
+
+![CH10 01_Q07-table1](https://github.com/user-attachments/assets/b593af8f-f2f6-4355-9acb-b7b2d88f0e57)
+
+
