--- a/HW1123/05_張育菁/CH10.02_Q21.md
+++ b/HW1123/05_張育菁/CH10.02_Q21.md
@@ -1,2 +1,18 @@
 ![圖片](https://github.com/user-attachments/assets/fdb0b6d8-fba9-4f2e-86dc-44639a8c113a)
 
+由題目得知：對 17 棵 4 年生紅松樹主幹的生長進行測量，樣本的平均值和標準差分別為 28.7 和 8.6 公分。
+
+請為具有相似環境條件下的 4 年生紅松樹群體計算 90% 信賴區。
+
+已知條件 : n=17, d.f.=16, $$\bar{x} $$=28.7, s=8.6 , $$\sigma $$未知，小樣本，假設樣本隨機抽樣來自常態母體，故採用t分配進行信賴區間估計。 
+
+查t分配表得到 :  $$t_{17,0.05} $$ = 1.746
+
+C.I. = P ( $$\bar{x} - t * \frac{s} {\sqrt{n}} $$ < $$\mu_0 $$ < $$\bar{x} +t * \frac{s} {\sqrt{n}} $$ ) = 0.9  
+
+= P ( $$28.7 - 1.746 * \frac{8.6} {\sqrt{17}} $$ < $$\mu_0 $$ < $$28.7 + 1.746 * \frac{8.6} {\sqrt{17}} $$ ) = 0.9  
+
+= P ( 25.0578 < $$\mu_0 $$ < 32.3422 ) = 0.9 
+
+因此，90%的信賴水準之下，母體平均數的數值會落在信賴區間(25.0578 , 32.3422)之間。
+
