--- a/HW1123/05_張育菁/CH10.02_Q20.md
+++ b/HW1123/05_張育菁/CH10.02_Q20.md
@@ -1,2 +1,18 @@
 ![圖片](https://github.com/user-attachments/assets/cc054629-03f3-40cc-99e8-435c213d3886)
 
+由題目得知：健康人的腦部腦血流量 (CBF) 呈正態分佈，平均值為 74。隨機抽取 25 名中風患者，測得 CBF 平均值
+
+x¯= 69.7，標準差 s=16。以顯著性水平 α=0.05 檢驗中風患者的平均 CBF 是否與健康人不同。
+
+
+$$H_0$$ : $$\mu$$ = 74
+
+$$H_a$$ : $$\mu\ne$$ 74 (雙尾檢定)  
+
+已知條件 : n=25, d.f.=24, $$\bar{x} $$=0.797, s=0.008 , $$\sigma $$未知，小樣本，且樣本隨機抽樣來自常態母體，故採用t分配進行檢定。 
+
+基於顯著水準 α=0.05，雙尾檢定為 : α/2=0.025，自由度 =24， $$t_{24,0.025} $$ ， 查t分配表得到 :  $$t_{24,0.025} $$ = 2.064
+
+t-test : t = | $$\frac{\bar{x} - \mu_0}{s/\sqrt{n}} $$ |  = | $$\frac{69.7 - 74}{16/\sqrt{25}} $$ | = 1.3438 < 2.064 。    
+
+因為t檢定量未落在Rejection Region，故不拒絕 $$H_{0} $$ 。   
